--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
+    "@astrojs/vercel": "^8.1.4",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.4",
     "tailwindcss": "^4.1.5"
